--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+vyos-pppoe-server (0.1.10+vyos2+current1) unstable; urgency=medium
+
+  [ Thomas Jepp ]
+  * Fix build depends.
+  * Change the runtime dependency from libradiusclient-ng2 to libfreeradius-client2.
+
+  [ Kim Hagen ]
+
+ -- Kim Hagen <kim.sidney@gmail.com>  Sun, 24 Jan 2016 15:35:36 -0500
+
 vyos-pppoe-server (0.1.10+vyos2+lithium3) unstable; urgency=low
 
   * vyos-pppoe-server: update dh_gencontrol with new development build flag
