T434: Fix RADIUS client authentication
Commit e30691eb7c08("Change the runtime dependency from libradiusclient-ng2 to
libfreeradius-client2.") changed the radiusclient which is used during
authentication. This change was required by the 'squeeze' -> 'jessie' upgrade.

"libradiusclient-ng2" used the configuration files from /etc/radiusclient-ng,
but "libfreeradius-client2" now uses "/etc/radiusclient".

Paths have been adjusted using:
  sed -i s@/etc/radiusclient-ng@/etc/radiusclient@g <file>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,12 @@
 vyos-pppoe-server (0.1.10+vyos2+current1) unstable; urgency=medium
 
+  [ Christian Poessinger ]
+  * Fix radiusclient folder after migration to libfreeradius-client2
+
+ -- Christian Poessinger <christian@poessinger.com>  Fri, 01 Dec 2017 18:00:00 +0100
+
+vyos-pppoe-server (0.1.10+vyos2+current1) unstable; urgency=medium
+
   [ Thomas Jepp ]
   * Fix build depends.
   * Change the runtime dependency from libradiusclient-ng2 to libfreeradius-client2.
