--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyos-pppoe-server (1.2.0-1) stable; urgency=medium
+
+  * New branch.
+
+ -- Daniil Baturin <daniil@baturin.org>  Fri, 28 Sep 2018 22:31:43 +0200
+
 vyos-pppoe-server (0.1.10+vyos2+current1) unstable; urgency=medium
 
   [ Christian Poessinger ]
